# ethercat

./: CMakeLists.txt  CMakePresets.json  master.cpp  vcpkg.json
cmake/toolchains/: x64-linux-clang.cmake
include/: pack.h
include/public/ec_lib/: frame.hpp
include/public/ec_lib/datatypes/: ethernet_frame.hpp  ethertype.hpp
tests/: CMakeLists.txt  test_pack.cpp
vcpkg-overlays/ports/: readme.md
vcpkg-overlays/triplets/: x64-linux-clang.cmake
